# polyclaw

./: .env.example  .gitignore  LICENSE  README.md  SKILL.md  config.example.yaml  pyproject.toml  requirements.txt  run.sh  setup.py  setup.sh
examples/: basic_scan.py
polymarket_news_edge/: __init__.py  edge_calculator.py  event_parser.py  llm_analyzer.py  market_cache.py  position_manager.py  probability_engine.py  scanner.py
scripts/: edge_calculator.py  news_ingestion.py  position_manager.py  requirements.txt  scanner.py  watchdog.sh
src/: __init__.py  acled_source.py  config.py  db.py  decision_journal.py  economic_calendar.py  edge_calculator.py  eia_source.py  event_parser.py  exit_manager.py  gdacs_source.py  gdelt_source.py  live_report.py  live_trader.py  llm_analyzer.py  market_cache.py  news_ingestion.py  order_executor.py  position_manager.py  position_tracker.py  price_monitor.py  probability_engine.py  reddit_source.py  redemption.py  scanner.py  sports_data.py  sports_odds.py  strategy_arena.py  telegram_source.py  twitter_source.py  volume_monitor.py  weather_source.py
tests/: conftest.py  test_acled_source.py  test_config.py  test_edge_calculator.py  test_eia_source.py  test_exit_manager.py  test_gdacs_source.py  test_gdelt_source.py  test_llm_analyzer.py  test_order_executor.py  test_position_manager.py  test_probability_engine.py  test_scanner.py  test_strategy_arena.py  test_telegram_source.py
