[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-news-edge"
version = "1.1.0"
description = "AI-powered news information advantage scanner for Polymarket"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Jasmine Zhang"}]
keywords = ["polymarket", "prediction-markets", "trading", "news", "edge-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "feedparser",
    "httpx",
    "rich",
    "pandas",
    "rapidfuzz",
]

[project.scripts]
polymarket-edge = "polymarket_news_edge.scanner:main"

[project.urls]
Homepage = "https://github.com/USER/polymarket-news-edge"
Repository = "https://github.com/USER/polymarket-news-edge"
